--- a/index.html
+++ b/index.html
@@ -31,18 +31,18 @@
 
         <tbody>
             <tr>
-                <td>Produto 1</td>
+                <td>Camisa</td>
                 <td>2</td>
                 <td>5$</td>
                 <td rowspan="2">Sim</td>
             </tr>
             <tr>
-                <td>Produto 2</td>
+                <td>Calça jeans</td>
                 <td>5</td>
                 <td>10$</td>
             </tr>
             <tr>
-                <td>Produto 3</td>
+                <td>Bermuda</td>
                 <td>3</td>
                 <td>15$</td>
                 <td>Não</td>
