--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <tbody>
             <tr>
-                <td>Camisa</td>
+                <td>Casaco</td>
                 <td>2</td>
                 <td>5$</td>
                 <td rowspan="2">Sim</td>
